ros2_ws/log/build_2023-09-29_18-02-46/bluey_tools/stderr.log
  File "/home/jenkin/Documents/bluey/ros2_ws/install/bluey_tools/lib/python3.8/site-packages/bluey_tools/bluey_ctrl_node.py", line 80
    self.lightOn():
                  ^
SyntaxError: invalid syntax

